--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://dilangoodwin.github.io/'
+baseURL = 'https://blog.dilanjgoodwin.uk'
 languageCode = 'en-gb'
 title = 'Dilan Goodwin'
 theme = "m10c"
