--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,17 @@ theme = "m10c"
 		url = '/'
 		weight = 1
 	[[menu.main]]
+		identifier = 'blog'
+		name = 'Blog'
+		url = '/posts'
+		weight = 2
+	[[menu.main]]
 		identifier = 'writeups'
 		name = 'WriteUps'
 		url = '/writeups'
 		weight = 3
+	[[menu.main]]
+		identifier = 'programming'
+		name = 'Programming'
+		url = '/programming'
+		weight = 4
