--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,10 @@ theme = "m10c"
 		icon = 'github'
 		name = 'GitHub'
 		url = 'https://github.com/DilanGoodwin'
+	[[params.social]]
+		icon = 'linkedin'
+		name = 'LinkedIn'
+		url = 'https://www.linkedin.com/in/dilan-goodwin-1b5864224'
 
 [menu]
 	[[menu.main]]
@@ -36,3 +40,8 @@ theme = "m10c"
 		name = 'Programming'
 		url = '/programming'
 		weight = 4
+
+[sitemap]
+  changefreq = 'monthly'
+  filename = 'sitemap.xml'
+  priority = 0.5
