--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,9 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: false
 
 jobs:
   # Page Build Job
@@ -25,7 +25,7 @@ jobs:
         run: python3 ./.github/scripts/imgListGenerator.py
       
       - name: Check Changes
-        id: check_changes
+        id: changes_made
         run: |
           if [[ -n "$(git diff --exit-code)" ]]; then
             echo "Changes detected."
@@ -36,7 +36,7 @@ jobs:
           fi
 
       - name: Push Changes
-        if: steps.check_changes.outputs.has_changes == 'true'
+        if: steps.changes_made.outputs.has_changes == 'true'
         run: |
           git config --global user.name "${{github.actor}}"
           git config --global user.email "${{github.actor}}@users.noreply.github.com"
